# evotl-sim-thp

./: CMakeLists.txt  README.md  problemStatement.md  run.bat  vehicles.csv
include/: aircraft.cpp  aircraft.h  aircraftType.hpp  charger.cpp  charger.h  evotlSim.cpp  evotlSim.h  statisticsRecorder.cpp  statisticsRecorder.h
src/: aircraft.cpp  charger.cpp  evotlSim.cpp  main.cpp  statisticsRecorder.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  aircraftTest.cpp  cmake_install.cmake  evotlSimTest.cpp
